feat: create MySQL connection

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 spring.application.name=bern-demo-api
+spring.datasource.url =jdbc:mysql://database-learning-bern.cj2gqwg0ed6q.us-west-2.rds.amazonaws.com:3306/incidentes-urbanos
+spring.datasource.username=admin
+spring.datasource.password=#l3arnDb
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.format_sql=true
